Adds some initial customization options to the demo for the checker tool.

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,9 @@
       <div class="divider"></div>
 
       <div class="checkerContainer">
-        <convai-checker
-           inputId="checkerTextarea"
-           configuration="demo"
-           serverUrl="">
-          Loading...
-        </convai-checker>
+        <div>
+          <customizable-demo-form>Loading...</customizble-demo-form>
+        </div>
         <textarea class="checkerInputBox"
                   id="checkerTextarea"
                   placeholder="type something here and see how the dot above reacts."
