--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <script src='https://www.google.com/recaptcha/api.js?render=explicit' async defer></script>
     <script src="https://apis.google.com/js/platform.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script src="//twemoji.maxcdn.com/2/twemoji.min.js?2.3.0"></script>
   </head>
   <body>
     <div class="demoContainer">
