Adds note in the html

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
       </div>
 
       <div class="testWebcomponent">
-        TEST
-        <demo-wc></demo-wc>
+        <p>TEST</p>
+        <convai-checker demo-settings="insertTestDemoSettingsHere"></convai-checker>
       </div>
     </div>
   </body>
