Adds url encoding of DemoSettings to the customizable demo form.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
       <div class="checkerContainer">
         <div>
-          <customizable-demo-form>Loading...</customizble-demo-form>
+          <wrapper-app></wrapper-app>
         </div>
         <textarea class="checkerInputBox"
                   id="checkerTextarea"
