Addresses PR comments.

--- a/src/index_with_elements.html
+++ b/src/index_with_elements.html
@@ -22,7 +22,21 @@
 
       <div class="checkerContainer">
         <div>
-          <convai-checker input-id="checkerTextarea" demo-settings-json='{"configuration":"default","gradientColors":["#25C1F9","#7C4DFF","#D400F9"],"showPercentage":true,"showMoreInfoLink":true,"feedbackText":["Please review before posting.","Please review before posting.","Please review before posting."],"scoreThresholds":[0.5,0.5,0.75],"useGapi":false,"apiKey":"","hideLoadingIconAfterLoad":false,"hideLoadingIconForScoresBelowMinThreshold":true,"userFeedbackPromptText":"Seem wrong?","alwaysHideLoadingIcon":false,"loadingIconStyle":"circle_square_diamond"}'>
+          <convai-checker input-id="checkerTextarea" demo-settings-json='{
+            "configuration":"default",
+            "gradientColors":["#25C1F9","#7C4DFF","#D400F9"],
+            "showPercentage":true,
+            "showMoreInfoLink":true,
+            "feedbackText":["Please review before posting.","Please review before posting.","Please review before posting."],
+            "scoreThresholds":[0.5,0.5,0.75],
+            "useGapi":false,
+            "apiKey":"",
+            "hideLoadingIconAfterLoad":false,
+            "hideLoadingIconForScoresBelowMinThreshold":true,
+            "userFeedbackPromptText":"Seem wrong?",
+            "alwaysHideLoadingIcon":false,
+            "loadingIconStyle":"circle_square_diamond"
+          }'>
           </convai-checker>
         </div>
         <textarea class="checkerInputBox"
