Adds support for fetching emoji images from our cloud bucket when using the plugin endpoint, since that doesn't have access to local image assets.

--- a/src/index_with_elements.html
+++ b/src/index_with_elements.html
@@ -30,12 +30,13 @@
             "feedbackText":["Please review before posting.","Please review before posting.","Please review before posting."],
             "scoreThresholds":[0.5,0.5,0.75],
             "useGapi":false,
+            "usePluginEndpoint":true,
             "apiKey":"",
             "hideLoadingIconAfterLoad":false,
-            "hideLoadingIconForScoresBelowMinThreshold":true,
+            "hideLoadingIconForScoresBelowMinThreshold":false,
             "userFeedbackPromptText":"Seem wrong?",
             "alwaysHideLoadingIcon":false,
-            "loadingIconStyle":"circle_square_diamond"
+            "loadingIconStyle":"emoji"
           }'>
           </convai-checker>
         </div>
