Fixes the build for the plugin component.

--- a/src/index_with_elements.html
+++ b/src/index_with_elements.html
@@ -37,7 +37,7 @@
             "userFeedbackPromptText":"Seem wrong?",
             "alwaysHideLoadingIcon":false,
             "loadingIconStyle":"emoji"
-          }'>
+          }' plugin-endpoint-url="https://test-updates-dot-perspective-demo.appspot.com/plugin">
           </convai-checker>
         </div>
         <textarea class="checkerInputBox"
